Fixes sidebar covering dj button

--- a/static/style.less
+++ b/static/style.less
@@ -304,8 +304,6 @@ a {
     float: right;
     position: relative;
     width: 275px;
-    min-width: 25%;
-    max-width: 50%;
     height: 100%;
     min-height: 350px;
     background-color: white;
